--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,18 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: x
 github_username:  hoonv
 
+
+category_dir: category/
+
+
+
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
 
+
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
