--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - title: About
   url: /about/
-- title: Archive
-  url: /archive/
-- title: Categories
-  url: /categories/
+# - title: Archive
+#   url: /archive/
+# - title: Categories
+#   url: /categories/
