--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: hoonv
+title: Fun하지만 뻔하지않게
 email: chaehk95@naver.com
-description: my blog
+description: hoonv
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  hoonv
-
+permalink: /:categories/:title
 # Build settings
 theme: monophase
 plugins:
