--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ theme: monophase
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
-  
+  - jekyll-sitemap
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
