update address for me

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >-
 lang: en-US
 timezone:  Europe/Rome
 repo: https://github.com/hoonv/hoonv.github.io # site repo [optional]
-data-theme: dark # default theme "dark" | "light"
+data-theme: light # default theme "dark" | "light"
 discus-identifier: powex # replace with your disqus shortname
 
 author:
