--- a/_config.yml
+++ b/_config.yml
@@ -2,21 +2,21 @@ site: hoonv
 title: hoonv
 greetings: Hello 👋
 description: >-
-  채훈기의 개인 블로그 입니다.
-lang: en-US
-timezone:  Europe/Rome
+  hoonv의 개인 블로그 입니다.
+lang: ko-kr
+timezone:  Korea/Seoul
 repo: https://github.com/hoonv/hoonv.github.io # site repo [optional]
-data-theme: dark # default theme "dark" | "light"
-discus-identifier: powex # replace with your disqus shortname
+data-theme: light # default theme "dark" | "light"
+discus-identifier: hoonv # replace with your disqus shortname
 
 author:
   name: hoonv
-  bio: just a minimalist, personal blog
+  bio: personal blog
   userpicture: 
   username: hoonv # general username
   github: https://github.com/hoonv # github username
   twitter: # twitter username
-  email: your-email@email.com # email adress
+  email: chaeefe@email.com # email adress
 
 # Font Settings
 googlewebfonts: family=Play:wght@400;700&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900
